# hackathon1

./: .gitignore  IMPLEMENTATION_COMPLETE.md  pyproject.toml  requirements.txt  test_gemini.py  test_retrieval.py
.specify/templates/: chapter-template.md
backend/: .env.example  DOCKER_README.md  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  server.py  test_openrouter.py  verify_storage.py
backend/rag_agent/: README.md  main.py  test_agent_integration.py  test_debugging_capabilities.py  test_error_logging.py  test_system_debugging.py
backend/rag_agent/agents/: retrieval_tool.py  textbook_agent.py
backend/rag_agent/api/models/: request.py  response.py
backend/rag_agent/api/routes/: chat.py  health.py
backend/rag_agent/config/: settings.py
backend/rag_agent/docs/: agent_service_usage.md  citations.md  function_documentation.md  multi_turn_conversations.md  question_answering.md
backend/rag_agent/services/: agent_service.py  conversation.py  validation.py
backend/rag_agent/utils/: connection_pool.py  debug_utils.py  error_handler.py  helpers.py  logger.py  performance.py  performance_utils.py
backend/retrieval_pipeline/: README.md  pyproject.toml  requirements.txt  retrieval_pipeline.py  test_query_type.py  test_retrieval.py  validate_retrieval.py
backend/src/: main.py  server.py
backend/src/agents/: agent_config.py  gemini_agent.py
backend/src/utils/: config_loader.py  logger.py
backend/tests/contract/: test_gemini_api.py
backend/tests/integration/: test_agent_response.py  test_env_loading.py  test_tracing.py
backend/tests/unit/: test_config_loader.py  test_logging.py
classic/: .npmignore  docusaurus.config.js  package-lock.json  package.json
classic/docs/appendix/: _category_.json  hardware-appendix.md
classic/docs/capstone/: autonomous-humanoid.md
classic/docs/intro/: index.md
classic/docs/module1/: robot-description-urdf.md  ros2-fundamentals.md  ros2-launch-params-tools.md
classic/docs/module2/: _category_.json  gazebo-fundamentals.md  intro-digital-twins.md  sensor-simulation.md  unity-robotics-high-fidelity.md
classic/docs/module3/: _category_.json  isaac-ros-navigation.md  isaac-ros-perception.md  nvidia-isaac-sim-foundations.md  sim-to-real-transfer.md
classic/docs/module4/: vision-language-action-foundations.md
docs/appendix/: _category_.json
docs/capstone/: _category_.json
docs/intro/: index.md
docs/module1/: _category_.json  ros2-fundamentals.md
docs/module2/: _category_.json
docs/module3/: _category_.json
docs/module4/: _category_.json
history/prompts/1-book-rag-ingestion/: 1-book-rag-ingestion.spec.prompt.md  (+5 more)
physical-ai-humanoid-robotics-textbook/: docusaurus.config.js  package-lock.json  package.json
specs/1-book-rag-ingestion/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-gemini-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-rag-agent-service/: data-model.md  quickstart.md  research.md  spec.md  tasks.md
specs/2-rag-retrieval-validation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/introduction-to-physical-ai/: spec.md
specs/master/: plan.md  spec.md  tasks.md
specs/module-1-ros2/: spec.md
specs/module-2-digital-twin/: spec.md
specs/module-3-ai-robot-brain/: spec.md
specs/module-4-vla/: spec.md
tests/integration/: test_citation_accuracy.py  test_conversation.py  test_determinism.py  test_diverse_queries.py  test_integration.py  test_performance.py
tests/unit/: test_citations.py  test_question_answering.py
(+70 files in other folders)
