[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools"

[project]
name = "rag-agent-service"
version = "1.0.0"
description = "RAG Agent Service for Physical AI Textbook"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Physical AI Team", email = "team@physical-ai.org"}
]
dependencies = [
    "openai>=1.0.0",
    "fastapi>=0.100.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.20.0",
    "python-dotenv>=0.19.0",
    "qdrant-client>=1.3.0",
    "pytest>=7.0.0",
    "httpx>=0.24.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/physical-ai/rag-agent-service"
Repository = "https://github.com/physical-ai/rag-agent-service"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend.rag_agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--cov=backend",
    "--cov-report=html",
    "--cov-report=term-missing"
]

[tool.coverage.run]
source = ["backend"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/env/*",
    "*/__pycache__/*"
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true