[project]
name = "rag-agent"
version = "0.1.0"
description = "RAG Agent Service for Physical AI Textbook"
authors = [{name = "Developer", email = "dev@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "python-dotenv>=0.19.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "cohere>=4.0.0",
    "qdrant-client>=1.3.0",
    "lxml>=4.9.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "google-generativeai>=0.6.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["rag_agent*"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]